Fix: a bit more vertical whitespace after a table

--- a/src/ishi/15-tables/common/_table.scss
+++ b/src/ishi/15-tables/common/_table.scss
@@ -1,3 +1,7 @@
 table {
     width: 100%
 }
+
+table + p, table + ol, table + ul {
+    margin-top: $type-non-p-spacing;
+}
